<resources>
    <string name="app_name">Siminov Liquor</string>
    <string name="gin_description">Gin is a spirit made with juniper berries.</string>
    <string name="gin_history">By the 11th century, Italian monks were flavoring crudely distilled spirits with juniper berries. During the Black Death, this drink was used, although ineffectively, as a remedy. As the science of distillation advanced from the Middle Ages into the Renaissance period, juniper was one of many botanicals employed by virtue of its perfume, flavour, and purported medicinal properties</string>
    <string name="gin_link">http://en.wikipedia.org/wiki/Gin</string>
    <string name="gin_alchol_content">Gin has a minimum alcohol content of 40 percent in the US (80 proof).</string>
    <string name="rum_description">Rum is a distilled liquid made from molasses and sugarcane juice.</string>
    <string name="rum_history">The first distillation of rum originated in the Caribbean in the 17th centry.</string>
    <string name="rum_link">http://en.wikipedia.org/wiki/Rum</string>
    <string name="rum_alchol_content">Rum typically has an alcohol content in the range of 20 to 80 percent by volume (40 to 160 proof).</string>
    <string name="tequilla_description">Tequila is a spirit made with Blue Agave.</string>
    <string name="tequilla_history">The first distillation of tequila originated in Mexico in the 16th centry.</string>
    <string name="tequilla_link">http://en.wikipedia.org/wiki/Tequila</string>
    <string name="tequilla_alchol_content">Tequila typically has an alcohol content in the range of 35 to 55 percent by volume (70 to 110 proof).</string>
    <string name="vodka_descrption">Vodka is a colorless liquid that contains a mixture of water and distilled ethanol. Vodka is made from a fermented substance such as potatoes, rye, wheat or sugar beet molasses.</string>
    <string name="vodka_history">Vodka originated in Russia inthe 14th centry.</string>
    <string name="vodka_link">http://en.wikipedia.org/wiki/Vodka</string>
    <string name="vodka_alchol_content">Vodka typically has an alcohol content in the range of 35 to 50 percent by volume (70 to 100 proof).</string>
    <string name="whiskey_description">Whiskey (or whisky) is a distilled liquid made from fermented grain mash.</string>
    <string name="whiskey_history">Distillation spread from Ireland to Scotland (about one hundred years later) and originated from the European continent in the later medieval centuries</string>
    <string name="whiskey_link">http://en.wikipedia.org/wiki/Whisky</string>
    <string name="whiskey_alchol_content">Whiskey has varying proof levels depending on the specific whiskey. Read more: http://wiki.answers.com/Q/What_percentage_of_alcohol_is_in_whisky#ixzz25n6vmBTZ</string>
    <string name="beer_description">Beer is produced by the saccharification of starch and fermentation of the resulting sugar.</string>
    <string name="beer_history">Beer is one of the worlds oldest prepared beverages, possibly dating back to the early Neolithic or 9500 BC, when cereal was first farmed, and is recorded in the written history of ancient Egypt and Mesopotamia.</string>
    <string name="beer_link">http://en.wikipedia.org/wiki/Beer</string>
    <string name="beer_alchol_content">A beer that is 4.0 percent by volume is about 3.2 percent by weight</string>
    <string name="wine_description">Wine is typically made of fermented grape juice.</string>
    <string name="wine_history">Wine dates back to 6000 BC and is believed to have originated in the area now considered Iran and Georgia.</string>
    <string name="wine_link">http://en.wikipedia.org/wiki/Wine</string>
    <string name="wine_alchol_content">100 grams (g) of wine is equivalent to 100 milliliters (mL) or 3.4 fluid ounces (fl oz.) of wine. 10.6 g of alcohol in 3.4 fl ounces is 13 percent alcohol by volume.</string>
    <string name="gin_brand_the_botanist_country">Islay</string>
    <string name="gin_brand_the_botanist_description">The Botanist is a brand of gin produced by distilling nine botanicals into the alcohol through direct boiling followed by passing the vapors through a basket containing an additional 22 herbal ingredients.</string>
    <string name="gin_brand_the_botanist_link">http://www.bruichladdich.com</string>
    <string name="gin_brand_tanqueray_country">United Kingtom</string>
    <string name="gin_brand_tanqueray_description">Tanqueray is a form of London dry gin, a spirit produced through double-distillation with botanicals added to the spirit during the second distillation phase. Tanqueray was first distilled in 1830 in England, with production moved to Scotland after World War II. </string>
    <string name="gin_brand_tanqueray_link">http://www.tanqueray.com/</string>
    <string name="rum_brand_bacardi_country">Bermuda</string>
    <string name="rum_brand_bacardi_description">Bacardi Limited is the largest privately-held, family-owned spirits company in the world. Its brand portfolio comprises more than 200 brands and labels, including the eponymous Bacardi rum.</string>
    <string name="rum_brand_bacardi_link">http://www1.bacardi.com/</string>
    <string name="rum_brand_old_monk_country">India</string>
    <string name="rum_brand_old_monk_description">Old Monk Rum is dark rum aged and blended seven years in India. The rum is vatted and aged with whole vanilla and a number of other ingredients to create a heavily spiced flavor.</string>
    <string name="rum_brand_old_monk_link">http://en.wikipedia.org/wiki/Old_Monk</string>
    <string name="tequila_brand_patron_country">Mexico</string>
    <string name="tequila_brand_patron_description">Patron is a luxury brand of tequila produced in Mexico and sold in hand-blown, individually numbered bottles.</string>
    <string name="tequila_brand_patron_link">http://www.patrontequila.com</string>
    <string name="tequila_brand_sauzate_country">Mexico</string>
    <string name="tequila_brand_sauzate_description">Sauza Tequila Import Company is a producer of tequila located in Tequila, a municipality of the state of Jalisco, Mexico. It was founded in 1873 when Don Cenobio Sauza started La Perseverancia distillery.</string>
    <string name="tequila_brand_sauzate_link">http://us.sauzatequila.com</string>
    <string name="vodka_brand_smirnoff_country">British</string>
    <string name="vodka_brand_smirnoff_description">Smirnoff is a brand of vodka owned and produced by the British company Diageo. The Smirnoff brand began with a vodka distillery founded in Moscow by Pyotr Arsenievich Smirnov (1831–1898), the son of illiterate Russian peasants.[citation needed] It is now distributed in 130 countries. It is produced in several countries including USA, Italy, Northern Ireland and Scotland.</string>
    <string name="vodka_brand_smirnoff_link">http://www.smirnoff.com</string>
    <string name="vodka_brand_absolut_country">Sweden</string>
    <string name="vodka_brand_absolut_description">Absolut Vodka is a brand of vodka, produced near Ahus, Skane, in southern Sweden. Absolut is owned by French group Pernod Ricard; they bought Absolut for 5.63 billion Euros in 2008 from the Swedish state.</string>
    <string name="vodka_brand_absolut_link">http://www.absolut.com/</string>
    <string name="whiskey_brand_johnnie_walker_country">Scotland</string>
    <string name="whiskey_brand_johnnie_walker_description">Johnnie Walker is a brand of Scotch Whisky owned by Diageo and originated in Kilmarnock, Ayrshire, Scotland. It is the most widely distributed brand of blended Scotch whisky in the world, sold in almost every country with yearly sales of over 130 million bottles.</string>
    <string name="whiskey_brand_johnnie_walker_link">http://www.johnniewalker.com</string>
    <string name="whiskey_brand_jack_daniels_country">U.S</string>
    <string name="whiskey_brand_jack_daniels_description">Jack Daniels is a brand of sour mash Tennessee whiskey that is the best selling whiskey in the world.[1] It is known for its square bottles and black label. It is produced in Lynchburg, Tennessee by the Jack Daniel Distillery, which has been owned by the Brown-Forman Corporation since 1956.</string>
    <string name="whiskey_brand_jack_daniels_link">http://www.jackdaniels.com</string>
    <string name="beer_brand_kingfisher_country">India</string>
    <string name="beer_brand_kingfisher_description">Kingfisher is an Indian beer brewed by United Breweries Group. The brand was launched in 1978. With a market share of over 36%, it is Indias largest selling beer, with 1 out of every 3 bottles of beer sold in India being a Kingfisher brand. It is currently available in 52 countries outside India.</string>
    <string name="beer_brand_kingfisher_link">http://www.kingfisherworld.com/</string>
    <string name="beer_brand_heineken_country">Dutch</string>
    <string name="beer_brand_heineken_description">Heineken Lager Beer (Dutch: Heineken Pilsener) or simply Heineken is a pale lager beer with 5% alcohol by volume produced by the Dutch brewing company Heineken International.</string>
    <string name="beer_brand_heineken_link">http://www.heineken.com</string>
    <string name="wine_brand_yellow_tail_country">Australia</string>
    <string name="wine_brand_yellow_tail_description">Yellow Tail (officially typeset is a brand of wine produced by Casella Wines Pty Ltd. Casella wines is based in Yenda, Australia, which has a population of approximately 1400 people.</string>
    <string name="wine_brand_yellow_tail_link">http://www.yellowtailwine.com/</string>
    <string name="wine_brand_gallo_country">California</string>
    <string name="wine_brand_gallo_description">E and J Gallo Winery was founded in 1933 by Ernest Gallo and Julio Gallo in Modesto, California. E and J Gallo Winery is the largest exporter of California wines and is a large promoter of wines from Sonoma County.</string>
    <string name="wine_brand_gallo_link">http://gallo.com/</string>
	<string name="title_bar_options">Options</string>
	<string name="liquor_details">Details</string>
	<string name="liquors">Liquors</string>
	<string name="liquor_description">Description</string>
	<string name="liquor_history">History</string>
	<string name="liquor_alchol_content">Alchol Content</string>
	<string name="liquor_link">Link</string>
	<string name="liquor_brand_detail">Detail</string>
	<string name="liquor_brands">Brands</string>
	<string name="source_code"><u>Source Code</u></string>
	<string name="source_code_package_name">siminov/orm/template/sourcecode/</string>
	<string name="home_source_code_file_name">home_source_code.txt</string>
	<string name="welcome_note">Welcome</string>
	<string name="create_new_account">Create A New Account</string>
	<string name="login_with_your_credentials">Please Login With Your Credentials</string>
	<string name="login_account_id">Account Id: </string>
	<string name="login_token">Token: </string>
	<string name="enter_account_id">Enter Account Id</string>
	<string name="enter_token">Enter Token</string>
	<string name="create">Create</string>
	<string name="login">Login</string>
	<string name="cancel">Cancel</string>
	<string name="account_id_and_token_mandatory">Both Account Id And Token Are Mandatory.</string>
	<string name="add_liquor">Add Liquor</string>
	<string name="add_liquor_brand">Add Brand</string>
	<string name="add_liquor_description">Description</string>
	<string name="add_liquor_history">History</string>
	<string name="add_liquor_link">Link</string>
	<string name="add_liquor_alchol_content">Alchol Content</string>
	<string name="add_liquor_brand_name">Name</string>
	<string name="add_liquor_brand_country">Country</string>
	<string name="add_liquor_brand_description">Description</string>
	<string name="add_liquor_brand_link">Link</string>
</resources>