<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res/siminov.orm.template">

    <LinearLayout 
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        >
        
        <TextView android:id="@+id/login_note"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:textStyle="bold|italic" android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            />
        
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent" android:layout_height="wrap_content" 
	    android:orientation="vertical"  android:background="@drawable/liquor_detail_artist" 
	    >
	    
        <LinearLayout 
	        android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
            >
    		
            <LinearLayout 
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="30" android:layout_gravity="center_vertical"
                >
                
	            <TextView android:id="@+id/login_account_id"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:textColor="@android:color/black" android:layout_marginLeft="5dip"
	                android:text="@string/login_account_id" 
	                />
            
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="70"
                >
            
	            <EditText android:id="@+id/account_id"
	                android:layout_width="fill_parent" android:layout_height="wrap_content"
	                android:gravity="center_vertical" android:background="@null"
	                android:hint="@string/enter_account_id" android:textColorHint="@color/light_grey"
	                />
                	                
            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout 
	        android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
            >
    		
            <LinearLayout 
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="30" android:layout_gravity="center_vertical"
                >

                <TextView android:id="@+id/login_token"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:textColor="@android:color/black" android:layout_marginLeft="5dip"
	                android:text="@string/login_token"
	                />
            
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="70"
                >
            
	            <EditText android:id="@+id/token"
	                android:layout_width="fill_parent" android:layout_height="wrap_content"
	                android:gravity="center_vertical" android:background="@null"
	                android:hint="@string/enter_token" android:textColorHint="@color/light_grey"
	                android:inputType="textPassword"
	                />
                	                
            </LinearLayout>
            
        </LinearLayout>
	        
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:gravity="bottom" 
        >
        
        <LinearLayout 
            android:layout_width="fill_parent" android:layout_height="40dip"
            android:background="@color/title_bar_background"
            >
            
	        <Button android:id="@+id/cancel"
	            android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:layout_weight="50" android:text="@string/cancel" android:textStyle="bold"
	            android:layout_marginTop="5dip" android:background="@null" android:textColor="@android:color/darker_gray"
	            android:textSize="8.2pt"
	            />
            
	        
	        <View 
				android:layout_width="1dip" android:layout_height="wrap_content" 
				android:background="@drawable/vertical_divider" 
				/>
	        
	        
	        <Button android:id="@+id/create_or_login"
	            android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:layout_weight="50" android:textStyle="bold"
	            android:layout_marginTop="5dip" android:background="@null" 
	            android:textSize="8.2pt" android:textColor="@android:color/darker_gray"
	            />
        
        </LinearLayout>
        
	</LinearLayout>
    
</LinearLayout>